[workspace]
members = ["turubai", "turubai_macros", "turubai_types"]

resolver = "2"

[workspace.package]
authors = ['Mark Sadiki Ngishu <msadiki06@icloud.com>']
license = "MIT OR Apache-2.0"
homepage = "https://itsjustbox.com/"
repository = "https://github.com/riley-freeman/turubai"
edition = "2021"
include = ["LICENSE*", "benches", "src", "tests"]
